force-app/main/default/objects/Opportunity/fields/Completed_FAFSA__c.field-meta.xml
<CustomField>
    <fullName>Completed_FAFSA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether a FAFSA application related to this Opportunity has been completed.</description>
    <inlineHelpText>Indicates whether a FAFSA application related to this Opportunity has been completed.</inlineHelpText>
    <label>Completed FAFSA</label>
    <type>Checkbox</type>
</CustomField>