force-app/main/default/objects/Opportunity/fields/Desired_Campus__c.field-meta.xml
<CustomField>
    <fullName>Desired_Campus__c</fullName>
    <description>The name of the desired campus for this Opportunity.</description>
    <inlineHelpText>The name of the desired campus for this Opportunity.</inlineHelpText>
    <label>Desired Campus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>