force-app/main/default/objects/Opportunity/fields/Desired_Degree_Level__c.field-meta.xml
<CustomField>
    <fullName>Desired_Degree_Level__c</fullName>
    <label>Desired Degree Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-degree</fullName>
            </value>
            <value>
                <fullName>Certification</fullName>
            </value>
            <value>
                <fullName>Undergraduate</fullName>
            </value>
            <value>
                <fullName>Graduate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>