force-app/main/default/objects/Opportunity/fields/Desired_Start_Term__c.field-meta.xml
<CustomField>
    <fullName>Desired_Start_Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Desired Start Term</label>
    <referenceTo>Term__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>