force-app/main/default/objects/Opportunity/fields/Living_Situation__c.field-meta.xml
<CustomField>
    <fullName>Living_Situation__c</fullName>
    <description>The intended living location related to this Opportunity.</description>
    <inlineHelpText>The intended living location related to this Opportunity.</inlineHelpText>
    <label>Living Situation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Campus</fullName>
            </value>
            <value>
                <fullName>Off Campus</fullName>
            </value>
            <value>
                <fullName>With Family</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>